--- a/copilot/2.archiscribe.mcp.devplan.md
+++ b/copilot/2.archiscribe.mcp.devplan.md
@@ -73,9 +73,11 @@ All explicit requirements from the requirements file have been implemented and c
 
 - [x] **5) MCP Typescript SDK integration & tool implementations**
    - [x] Install and configure `@modelcontextprotocol/sdk` as a dependency. Create a `src/mcp` module to host MCP server wiring and tool implementations.
-   - [x] Define two MCP tools that mirror the API operations:
+   - [x] Define four MCP tools that expose ArchiMate model functionality:
        - [x] `SearchViews`: Input: { query?: string }, Output: { markdown: string }
        - [x] `GetViewDetails`: Input: { viewname: string }, Output: { markdown: string }
+       - [x] `SearchElements`: Input: { query?: string, type?: string }, Output: { markdown: string }
+       - [x] `GetElementDetails`: Input: { elementname: string }, Output: { markdown: string }
    - [x] Implement handler functions that call the `ModelLoader` and `Renderer` components.
    - [x] Expose an MCP server start/stop API in `src/mcp/server.ts` that registers the tools with the SDK.
    - [x] Provide an HTTP wrapper that translates HTTP requests into MCP tool invocations.
@@ -126,7 +128,7 @@ All explicit requirements from the requirements file have been implemented and c
 ## Data contract / small design notes
 - Model shape (minimal):
   - View: { id, name, type, documentation?, properties: { [k]: v }, elements: [elementId], relationships: [relId] }
-  - Element: { id, name, type, documentation?, properties }
+  - Element: { id, name, type, documentation?, properties, inViews: [viewId], outgoingRelations: [relId], incomingRelations: [relId] }
   - Relationship: { id, sourceId, targetId, type, name }
 
 Logging line (proposed NDJSON example):
@@ -147,9 +149,10 @@ Rotation logic compares current date (UTC) to cached date component; on mismatch
 
 ## Tests (minimal set to create first)
 - Unit: Config default/override (happy & missing env)
-- Unit: ModelLoader parses sample XML, returns known view names
-- Unit: Renderer produces markdown sections for view with elements
+- Unit: ModelLoader parses sample XML, returns known view names and elements
+- Unit: Renderer produces markdown sections for view and element details
 - Integration: Start server with sample model; call `/views?query=` and `/views/:id` and assert HTTP 200 and markdown content
+- Integration: Start server with sample model; test element search by name and type, and element details retrieval
 - Logging: unit test logger rotation & record shape; integration test that tool + HTTP call produce expected log entries (parse JSON lines & assert fields)
 
 ## Acceptance criteria and success definition
